turtleart.lessons.turtleart.Main.Polygon7.scala.error
Source:5: error: not found: value pi
	droite(5*pi/ 7)
                 ^