turtleart.lessons.turtleart.Main.Polygon7.scala.code
override def run() {
	for (i<- 1 to 7){
	avance(80)
	droite(5*pi/ 7)
}
}